@startuml

title DesignClassDiagram
skinparam classAttributeIconSize 0
  namespace Game {
    class Game.Account {
        - balance : int
        - startBalance : int
        + Account()
        + getBalance()
        + newBalance()
        + setBalance()
    }
  }


  namespace Game {
    class Game.Board {
        - boardSize : int
        - fieldDatabase : String
        - myFields : Field[]
        + Board()
        + generateBoard()
        + getMyFields()
        - loadFromTXT()
    }
  }


  namespace Game {
    class Game.Chancekort {
        + DrawRandomChanceCard()
        + chancekorthandling()
    }
  }


  namespace Game {
    enum ChancekortTypes {
      DoneAlleHomework
      Give2ToBank
      Move5Forward
      MoveToPear
      MoveToSkatepark
      MoveToStart
    }
  }


  namespace Game {
    class Game.Die {
        - faceAmount : int
        - value : int
        + Die()
        + getFaceAmount()
        + getValue()
        + roll()
        + setFaceAmount()
        + setValue()
        + toString()
    }
  }


  namespace Game {
    class Game.Field {
        - color : String
        - fieldPosition : int[]
        - name : String
        - pairProperty : int
        - price : int
        + Field()
        + getColor()
        + getFieldPosition()
        + getName()
        + getOwner()
        + getPairProperty()
        + getPrice()
        + getfType()
        + setFieldPosition()
        + setOwner()
        + toString()
    }
  }


  namespace Game {
    enum fieldType {
      CHANCE
      FREEPARKING
      GOJAIL
      JAIL
      PROPERTY
      START
    }
  }


  namespace Game {
    class Game.GameHandler {
        + GameHandler()
        + generateplayers()
        {static} + landonfield()
        + startGame()
        + turn()
    }
  }


  namespace Game {
    class Game.Main {
        {static} + main()
    }
  }


  namespace Game {
    class Game.Player {
        {static} - counter : int
        - isjailed : boolean
        - name : String
        - playerNumber : int
        - position : int
        - soldSigns : int
        + Player()
        + getAc()
        + getName()
        + getPlayerNumber()
        + getPlayernumber()
        + getPosition()
        + getSoldSigns()
        + isIsjailed()
        + move()
        + setIsjailed()
        + setName()
        + setPlayerNumber()
        + setPlayernumber()
        + setPosition()
        + setSoldSigns()
        + toString()
    }
  }


  namespace Game {
    class Game.Rafflecup {
        - cup : Die[]
        + Rafflecup()
        + configure()
        + getCup()
        + roll()
        + rollar()
        + sum()
    }
  }


  namespace Game {
    class Game.Settings {
        {static} + BOARD_SIZE : int
        {static} + DIE_FACES : int
        {static} + DIE_NUMBER : int
        {static} + FIELD_DATABASE : String
        {static} + GO_RESTROOM_MONEY : int
        {static} + GO_SPOT_MONEY : int
        {static} + MAX_PLAYERS : int
        {static} + MIN_PLAYERS : int
        {static} + PAY_SPOT_MONEY : int
        {static} + SOLD_SIGNS : int
        {static} + STARTING_MONEY : int
        {static} + WINDOW_HEIGHT : int
        {static} + WINDOW_WIDTH : int
        - Settings()
    }
  }


  namespace Game {
    class Game.TXTReader {
        - txtToLoad : String
        + TXTReader()
        + readTXTFile()
        {static} + udskrift()
    }
  }


  namespace Game {
    class Game.playermoney {
        {static} + playerloser()
        + playermoney()
        {static} + playerwin()
    }
  }



  Game.Chancekort "1" *-- "6" Game.ChancekortTypes
  Game.Chancekort o-- Game.Settings


  Game.Field "1" *-- "1" Game.fieldType : fType
  Game.Field "0..1" o-- "1" Game.Player : owner


  Game.Player "1" *-- "1" Game.Account : playerAccount
  Game.Player o-- Game.Settings


  Game.GameHandler o-- Game.Chancekort
  Game.GameHandler o-- Game.Settings
  Game.GameHandler o-- Game.TXTReader
  Game.GameHandler o-- Game.playermoney
  Game.GameHandler o-- Game.Rafflecup
  Game.GameHandler o-- Game.Board


  Game.Main "1" *-- "1" Game.GameHandler


  Game.Rafflecup "1" *-- "1" Game.Die


  Game.Board "1" *-- "24" Game.Field

@enduml
